add swagger support
