# router/api/v1/instance/appliation.go
@@ -1,20 +1,11 @@
-/*
- * walm
- *
- * warp application lifecycle manager
- *
- * API version: 1.0.0
- * Contact: bing.han@transwarp.io
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-
-package helm
+package instance
 
 type Application struct {
 	Name       string   `json:"name"  description:"name of the release"`
 	Namespace  string   `json:"namespace,omitempty"  description:"namespace of the release"`
 	Version    string   `json:"version,omitempty"  description:"version of the release"`
-	Value      []string `json:"value,omitempty"  description:"value array of the release"`
+	Value      string   `json:"value,omitempty"  description:"value array of the release"`
+	Links      []string `json:"links,omitempty"  description:"link array of the release"`
 	Repo       string   `json:"repo,omitempty"  description:"repo where to find chart"`
 	Install    bool     `json:"install,omitempty"  description:"if install when not existed"`
 	ResetValue bool     `json:"reset-values,omitempty"  description:"if reset value when install"`
